fix(graal): request proxy should return body as a string.

--- a/scripting/graalvm/build.gradle
+++ b/scripting/graalvm/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     // test
     testImplementation project(':test:test-utils')
     testImplementation project(':test:api-tests')
+    testImplementation "org.mockito.kotlin:mockito-kotlin:$version_mockito_kotlin"
 
     // java 11 compatibility
     testImplementation ("javax.xml.bind:jaxb-api:$version_jaxb_api")
