build: update log4j and slf4j dependencies to version 2.20.0 and 2.0.11.
Fixes incompatibility between SLF4J versions on the classpath.

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ ext {
     version_jackson_databind = '2.18.0'
     version_jaxb_api = '2.3.1'
     version_junit_jupiter = '5.10.0'
-    version_log4j = '2.18.0'
+    version_log4j = '2.20.0'
+    version_slf4j = '2.0.11'
     version_micrometer = '1.11.3'
     version_mockito = '5.2.0'
     version_mockito_kotlin = '4.1.0'
