--- a/build.gradle
+++ b/build.gradle
@@ -112,7 +112,16 @@ subprojects {
     plugins.withType(org.jetbrains.kotlin.gradle.plugin.KotlinPluginWrapper).whenPluginAdded {
         kotlin {
             jvmToolchain {
-                languageVersion.set(JavaLanguageVersion.of(11))
+                languageVersion.set(JavaLanguageVersion.of(Integer.parseInt(project.findProperty('javaToolchainVersion') ?: '11')))
+            }
+        }
+        
+        tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
+            kotlinOptions {
+                jvmTarget = JavaVersion.VERSION_11.toString()
+                
+                // Enable default methods in interfaces for all Kotlin tasks
+                freeCompilerArgs = ["-Xjvm-default=all"]
             }
         }
     }
