--- a/.github/workflows/integ-test.yaml
+++ b/.github/workflows/integ-test.yaml
@@ -41,6 +41,7 @@ jobs:
         run: ./gradlew dist --stacktrace -xtest
 
       - name: Integration test
+        timeout-minutes: 10
         run: |
           ./scripts/docker-build.sh -p false dev
           ./scripts/integration-tests.sh outofcoffee/imposter:dev
